--- a/Algebra.tex
+++ b/Algebra.tex
@@ -13,6 +13,7 @@
 \usepackage{amsthm}
 \usepackage{faktor}
 \usepackage{wasysym}
+\usepackage{thmtools}
 
 \usepackage[margin=1.5cm]{geometry}
 \usepackage{fancyhdr}
@@ -121,7 +122,7 @@
 \begin{remark}
 	è immediato osservare che $ \Int{G} \lhd \Aut{G} $.
 \end{remark}
-\begin{theorem}
+\begin{theorem}[degli Automorfismi Interni]
 	\[ \Int{G} \cong \faktor{G}{Z(G)} \]
 \end{theorem}
 \begin{proof}
@@ -142,11 +143,11 @@
 \begin{definition}[Azione]
 	Si dice azione di un gruppo $ G $ su un insieme $ X $ un omomorfismo $ \varphi $ tale che \begin{align*}
 	\varphi \colon G &\to \mathcal{S}\left(X\right) \\
-	g &\mapsto \phi_g(x) = g \cdot x.
+	g &\mapsto \varphi_g(x) = g \cdot x.
 	\end{align*}
 \end{definition}
 
-\textbf{Esempio.} Siano $ G = \{ z \in \mathbb{C} \mid |z| = 1 \} $ e $ X = \mathbb{R}^2 $. E sia $ \phi $ l'azione: \begin{align*}
+\textbf{Esempio.} Siano $ G = C = \{ z \in \mathbb{C} \mid |z| = 1 \} $, $ X = \mathbb{R}^2 $ e sia $ \varphi $ l'azione: \begin{align*}
 \varphi \colon C &\to \mathcal{S}\left(\mathbb{R}^2\right) \\
 z &\mapsto \mathcal{R}(O, \arg z)
 \end{align*}
@@ -165,10 +166,10 @@ z &\mapsto \mathcal{R}(O, \arg z)
 	Si dice stabilizzatore di un elemento $ x \in X $ l'insieme di tutti gli elementi di $ G $ che agiscono in modo banale su $ x $: \[ \Stab{x} = \{ g \in G \mid g \cdot x = x \} \]
 \end{definition}
 \begin{remark}
-	è immediato osservare che $ \Stab{x} < G $, ma non necessariamente normale.
+	Lo stabilizzatore è un sottogruppo $$ \Stab{x} < G $$ ma non è necessariamente normale. $$  Z_{\mathcal{A}_{14}}(3 \; 1 \; 4) < \mathcal{A}_{14}$$
 \end{remark}
 
-\begin{theorem}
+\begin{theorem}[Relazione Orbite-Stabilizzatori]
 	\[ |G| = |\Orb{x}||\Stab{x}| \]
 \end{theorem}
 \begin{proof}
@@ -194,13 +195,16 @@ z &\mapsto \mathcal{R}(O, \arg z)
 
 \textbf{Esempi.}
 \begin{enumerate}
-	\item $ [G = C,\; X = \mathbb{R}^2 ] $ e l'azione dell'ultimo esempio. Questa sposta ruota ogni punto attorno all'origine, pertanto le orbite sono circonferenze centrate nell'origine e gli stabilizzatori sono tutti banali, tranne quello dell'origine che coincide con $ G $.
+	\item $ [G = C,\; X = \mathbb{R}^2 ] $ e l'azione dell'ultimo esempio. Questa ruota ogni punto attorno all'origine, pertanto le orbite sono circonferenze centrate nell'origine e gli stabilizzatori sono tutti banali, tranne quello dell'origine che coincide con $ G $.
 	\item $ [G = \mathbb{R},\; X = \mathbb{R}^2 ] $ e l'azione che trasforma $ r \in \mathbb{R} $ nella traslazione orizzontale di lunghezza $ r $. Le orbite sono le rette parallele alla traslazione e gli stabilizzatori sono tutti banali.
 	\item $ [G,\; X = G ] $ e l'azione sia la mappa che manda un elemento $ g $ nel coniugio per questo $ \varphi_g(x) = gxg^{-1} $. L'orbita di un elemento contiene tutti i coniugati di questo ed è detta \emph{classe di coniugio} di $ x $ $ (\mathcal{C}_x) $. Lo stabilizzatore di $ x $ contiene tutti e soli gli elementi tali che $ xg = gx $, ovvero il sottogruppo di tutti gli elementi che commutano con $ x $, è detto \emph{centralizzatore} di $ x $ ($ Z_G(x) $).
 	\item $ [G,\; X = \{ H \mid H < G \} ] $ e l'azione di coniugio. Le orbite non sono particolarmente interessanti, mentre lo stabilizzatore di un sottogruppo è detto \emph{Normalizzatore} di $ H $, $ N(H) $ ed è il più grande sottogruppo di $ G $ in cui $ H $ è normale.
 \end{enumerate}
 \begin{remark}
 	$ H \lhd G \;\Leftrightarrow\; N(H) = G $
+\end{remark}
+\begin{remark}[euristica]
+	Le azioni più comuni sono quelle naturali: il coniugio, la moltiplicazione a sinistra e, talvolta, la moltiplicazione a destra per l'inverso.
 \end{remark}
 \end{multicols}
 
@@ -216,7 +220,7 @@ z &\mapsto \mathcal{R}(O, \arg z)
 	
 	\[ |X| = \sum_{\substack{x \in R \\ \Orb{x} = \{x\} }} 1 + \sum_{\substack{x \in R \\ \Orb{x} \neq \{x\} }} \frac{|G|}{|\Stab{x}|} \]
 	
-	Osserviamo cosa succede nel caso dell'azione di coniugo da un gruppo in se (l'esempio 3 della lezione precedente). L'orbita di $ x $ è banale se e solo se $ gxg^{-1} = x $, $ \forall g \in G $, ovvero nel caso in cui $ x $ commuti con tutti gli elementi di $ G $ (stia nel centro). Dunque la formula di sopra si riscrive come desiderato.
+	Osserviamo cosa succede nel caso dell'azione di coniugo da un gruppo in se (l'esempio 3 di sopra). L'orbita di $ x $ è banale se e solo se $ gxg^{-1} = x $, $ \forall g \in G $, ovvero nel caso in cui $ x $ commuti con tutti gli elementi di $ G $ (stia nel centro). Dunque $ R = Z(G) $ mentre gli elementi rimanenti rappresentano centralizzatori distinti.
 \end{proof}
 
 \begin{definition}[$ p $-gruppo]
@@ -256,21 +260,7 @@ z &\mapsto \mathcal{R}(O, \arg z)
 	Sia $$ X = \{(x_1, \dots, x_p) \in G^p \mid x_1\cdots x_n = 1 \} $$ questo insieme ha esattamente $ |G|^{p-1} $ elementi, infatti scelti i primi $ (p-1) $ l'ultimo è univocamente determinato come il suo unico inverso. Se una $ p $-upla non è composta da un solo elemento ripetuto, allora possiamo ciclare i suoi termini per ottenere altre $ (p-1) $ $ p $-uple in $ X $. Dunque, detto $ n $ il numero di $ g $ tali che $ g^p = 1 $ \[ p \mid |G|^{p-1} - n \;\Rightarrow\; p \mid n \] e poiché $ e^p = e $ ci sono almeno $ p $ elementi di ordine $ p $.
 \end{proof}
 
-\begin{remark}
-	Cosa riusciamo a dire su un possibile teorema inverso a quello di Lagrange?
-\end{remark}
-\begin{enumerate}
-	\item per Gruppi Abeliani?
-	\begin{enumerate}
-		\item elementi di ordine divisore? no, basti guardare $ \mathbb{Z}_2 \times \mathbb{Z}_2 $
-		\item sottogruppi di ordine divisore? sì! esercizio.
-	\end{enumerate}
-	\item per Gruppi non Abeliani?
-	\begin{enumerate}
-		\item a maggior ragione no
-		\item no
-	\end{enumerate}
-\end{enumerate}
+
 
 \textbf{Esercizio.} Classificare i gruppi $ G $ di ordine $ 6 $.
 
@@ -280,16 +270,17 @@ Per Cauchy esistono $ x, y \in G $ di ordine, rispettivamente, 2 e 3.
 	\item Se non lo è, costruiamo un isomorfismo esplicito...
 \end{itemize}
 
-\begin{theorem}[Caylay]
+\begin{theorem}[Cayley]\label{Cayley}
 	Possiamo immergere ogni gruppo $ G $ in $ \mathcal{S}(G) $.
 \end{theorem}
 \begin{proof}
-	Esibiamo un'azione fedele (ovvero, iniettiva): \fun{\Phi}{G}{\mathcal{S}(G)}{g}{\varphi_g(x) = gx}
-	è ora sufficiente verificare che $ \Phi $ è ben definito ($ \varphi_g $ è una bigezione) e iniettivo.
+	L'azione di moltiplicazione a sinistra è fedele
+	 \fun{\Phi}{G}{\mathcal{S}(G)}{g}{\varphi_g(x) = gx}
+	ovvero, iniettiva.
 \end{proof}
 
 \begin{definition}[Sottogruppo generato]
-	Sia $ S \subset G $ un sottoinsieme su $ G $, chiamiamo il più sottogruppo contenente $ S $  sottogruppo generato da $ S $ ($ \langle S \rangle $). \[ \langle S \rangle = \bigcap_{\substack{H \leq G \\ S \subseteq H }} H  \]
+	Sia $ S \subset G $ un \emph{sottoinsieme} di $ G $. Chiamiamo $ \langle S \rangle $ il più sottogruppo contenente $ S $, sottogruppo generato da $ S $. \[ \langle S \rangle = \bigcap_{\substack{H \leq G \\ S \subseteq H }} H  \]
 \end{definition}
 \begin{theorem}[Caratterizzazione dei sottogruppi generati]
 	\[ \langle S \rangle = \{ s_1 \cdots s_k \mid k \in \mathbb{N}, \; s_i \in S \cup S^{-1} \} \]
@@ -337,7 +328,7 @@ Per Cauchy esistono $ x, y \in G $ di ordine, rispettivamente, 2 e 3.
 	Si ha \[ D_n = \langle \rho, \sigma \mid \rho ^n = e, \sigma^2 = e, \sigma \rho \sigma = \rho^{-1} \rangle \]
 \end{theorem}
 \begin{proof}
-	Tutti gli elementi sopra definiti possiamo ridurli a un elemento della forma $ \rho^k $ o $ \sigma \rho^k $ per un qualche $ 0 \leq k < n $. Questo perché così sono fatti i generatori e ogni operazione permessa (composizione e inversione) si riducono a questa forma attraverso le leggi a disposizione. Inoltre possiamo immergere $ D_n $ in un sottogruppo di $ \mathbf{O}_2(\mathbb{R}) $ di ordine $ 2n $ attraverso un omomorfismo suriettivo: \begin{align*}
+	Tutti gli elementi sopra definiti possiamo ridurli a un elemento della forma $ \rho^k $ o $ \sigma \rho^k $ per un qualche $ 0 \leq k < n $. Questo perché così sono fatti i generatori e ogni operazione permessa (composizione e inversione) tra due generatori può immediatamente essere ridotta a questa forma attraverso le cancellazioni imposte. Inoltre possiamo immergere $ D_n $ in un sottogruppo di $ \mathbf{O}_2(\mathbb{R}) $ di ordine $ 2n $ attraverso un omomorfismo suriettivo: \begin{align*}
 	\Phi \colon D_n &\to \mathbf{O}_2(\mathbb{R}) \\
 	\sigma &\mapsto \left(\begin{matrix}
 	-1 & 0 \\
@@ -383,15 +374,14 @@ Per Cauchy esistono $ x, y \in G $ di ordine, rispettivamente, 2 e 3.
 	D_n \arrow{r}{\Phi} \arrow[swap]{dr}{f} & \mathbf{O}_2(\mathbb{R}) \arrow{d}{det} \\
 	& \{\pm 1\} \cong \mathbb{Z}_2	\end{tikzcd}
 	\]
-	Notiamo che $ \ker f = C_n \lhd D_n $ e osserviamo cosa succede quando restringiamo l'omomorfismo trovato ad $ H $
+	Restringiamo l'omomorfismo trovato ad $ H $
 	\[ \begin{tikzcd}
-	H \arrow{r}{f_{|H}} \arrow[swap]{d}{id} & f\left(H\right) \arrow{d}{id} \\
-	D_n \arrow{r}{f} & \mathbb{Z}_2
-	\end{tikzcd}
+	D_n \arrow{r}{\Phi} \arrow[swap]{dr}{f} & \mathbf{O}_2(\mathbb{R}) \arrow{d}{det} \\
+	H \arrow{r}{} \arrow[swap]{u}{i} & \mathbb{Z}_2	\end{tikzcd}
 	\]
-	Abbiamo così scomposto il nostro sottogruppo come desiderato, poiché conosciamo il ker della trasformazione
+	Visto che $ \ker f = C_n \lhd D_n $, il sottogruppo $ H $ viene scomposto in nucleo e laterale
 	\[ H = f^{-1}(0) \sqcup f^{-1}(1) = (H \cap C_n) \sqcup \tau (H\cap C_n) \]
-	Poiché $ (H \cap C_n) < C_n $ possiamo vederlo come il sottogruppo generato da una potenza della rotazione elementare \[ H \cap C_n = \langle \rho^d \colon d \mid n \rangle \] Il suo unico laterale sarà allora composto dagli $ d $ elementi della forma  \begin{align*}\tau(H\cap C_n) &=  \{\tau\rho^d, \tau\rho^{2d}, \dots, \tau\rho^{n-d} \} \\ &= \{\sigma\rho^{d+i}, \sigma\rho^{2d+i}, \dots, \sigma\rho^{n-d +i} \}\end{align*}  che è facile convincersi dipendere solamente dalla classe di $ i \mod d $.
+	Infine, dato che il nucleo è contenuto nel sottogruppo ciclico $ (H \cap C_n) < C_n $, possiamo pensarlo come il sottogruppo generato da una potenza della rotazione elementare \[ H \cap C_n = \langle \rho^d \colon d \mid n \rangle \] Il suo unico laterale sarà allora composto dagli $ d $ elementi della forma  \begin{align*}\tau(H\cap C_n) &=  \{\tau\rho^d, \tau\rho^{2d}, \dots, \tau\rho^{n-d} \} \\ &= \{\sigma\rho^{d+i}, \sigma\rho^{2d+i}, \dots, \sigma\rho^{n-d +i} \}\end{align*}  che è facile convincersi dipendere solamente dalla classe di $ i \mod d $.
 \end{proof}
 
 \textbf{Esercizi.}
@@ -425,9 +415,9 @@ Per Cauchy esistono $ x, y \in G $ di ordine, rispettivamente, 2 e 3.
 %	I cicli sono orbite dell'applicazione di immersione. 
 %\end{remark}
 
-\begin{theorem}
+\begin{remark}
 	$ \mathcal{S}_n $ è generato dai suoi cicli.
-\end{theorem}
+\end{remark}
 
 \textbf{Esercizi.}
 \begin{enumerate}
@@ -436,13 +426,13 @@ Per Cauchy esistono $ x, y \in G $ di ordine, rispettivamente, 2 e 3.
 	\item L'ordine di $ \sigma $ è il minimo comune multiplo delle lunghezze dei suoi $ k $-cicli.
 \end{enumerate}
 
-\begin{theorem}
+\begin{remark}
 	$ \mathcal{S}_n $ è generato dalle sue trasposizioni.
-\end{theorem}
+\end{remark}
 \begin{remark}
 	La decomposizione in trasposizioni non è unica. Ma la parità del numeri di trasposizioni lo è:
 \end{remark}
-\begin{theorem}
+\begin{theorem}[delle trasposizioni]
 	La parità del numero di trasposizioni della scomposizione di una qualunque permutazione $ \sigma \in \mathcal{S}_n $ non dipende dalla scomposizione.
 \end{theorem}
 \begin{proof}
@@ -466,23 +456,22 @@ Per Cauchy esistono $ x, y \in G $ di ordine, rispettivamente, 2 e 3.
 	\[ \ker(\text{sgn}) = \mathcal{A}_n \lhd \mathcal{S}_n \]
 \end{definition}
 \begin{remark}
-	Ogni sottogruppo $ H < \mathcal{S}_n $ è contenuto interamente in $ \mathcal{A}_n $ o viene spezzato a metà dal gruppo alterno. Questo perché possiamo restringere l'omomorfismo $ \det $ al solo $ H $, dunque l'immagine può solo restringersi.
+	Ogni sottogruppo $ H < \mathcal{S}_n $ è contenuto interamente in $ \mathcal{A}_n $ o viene spezzato a metà dal gruppo alterno. Questo perché possiamo restringere il determinante al solo $ H $, che dunque può spezzarsi in nucleo e laterale, o immergersi interamente nel nucleo.
 \end{remark}
 
-\begin{theorem}
+\begin{theorem}[delle permutazioni coniugate]
 	Due permutazioni $ \sigma, \tau \in \mathcal{S}_n $ sono coniugate se e solo se hanno lo stesso tipo di decomposizione in cicli.
 \end{theorem}
 \begin{proof}
-	$ \Rightarrow  $. Ci basta dimostrare che dato un ciclo $ \sigma = (a_1 \; \cdots \; a_k) $ e una permutazione tale che $ \tau(a_i) = b_i $. Allora le immagini del ciclo vengono mandati nel loro "successore" \[ \tau\sigma\tau^{-1} (b_i) = \tau\sigma(a_i) = \tau(a_{i+1}) = b_{i+1} \] mentre le non immagini di alcun $ a_i $, con controimmagini invarianti per $ \sigma $, rimangono fisse \[ \tau\sigma\tau^{-1} (x) = \tau\tau^{-1}(x) = x \]
-	pertanto \[\tau\sigma\tau^{-1} = (b_1 \; \cdots \; b_k) \]
-	$ \Leftarrow $. Se vogliamo mandare il ciclo $ (a_1 \; \cdots \; a_k) $ in $ (b_1 \; \cdots \; b_k) $ ci basta coniugare per la stessa permutazione di prima: $ \tau(a_i) = b_i $. Possiamo poi costruire il coniugio moltiplicando tra loro tutte le $ \tau $ relative ai vari cicli.
+	E' più che sufficiente osservare che dato un ciclo $$  \sigma = (a_1 \; \cdots \; a_k)  $$ e una permutazione tale che $ \tau : a_i \mapsto b_i $ si ha
+	\[\tau\sigma\tau^{-1} = (\tau(a_1) \; \cdots \; \tau(a_k)) = (b_1 \; \cdots \; b_k) \]
 \end{proof}
 
 \begin{remark}
 	Notiamo che il centralizzatore di $ \sigma $ coincide con lo stabilizzatore dell'azione di coniugio di $ \mathcal{S}_n $ in se. Dunque
 	\[ |Z(\sigma)| = \frac{n!}{|\mathcal{C}(x)|} \]
 \end{remark}
-\textbf{Esercizio.} Data una permutazione $ \sigma $ trovare $ N(\langle \sigma \rangle) $.
+\textbf{Esercizio.} Data una permutazione $ \sigma $ trovare $ |N(\langle \sigma \rangle)| $.
 
 Osserviamo che
 \[ N(\gen{\sigma}) = \{ \tau \mid \tau\sigma\tau^{-1} = \sigma^k \} \]
@@ -501,26 +490,53 @@ e pertanto
 	Iniziamo a dimostrare che $ \mathcal{A}_5 $ è semplice, prima o poi concluderemo per induzione. Le classi di coniugio di questo gruppo hanno dimensione 1, 12, 12, 15, 20. Un gruppo normale dovrebbe essere unione di un certo numero di queste orbite, ma sommando le loro cardinalità non ottengo mai divisori di 60.
 \end{proof}
 
+\begin{theorem}[del ribelle]
+	Per ogni $ n \geq 3 $ i gruppi di permutazioni sono i propri automorfismi $$  \Aut{\S_n} \cong \S_n  $$ ma non per $ \S_6 $, che è un ribelle.
+\end{theorem}
+\begin{proof}
+	Per cominciare, osserviamo che
+	\[ \Int{\S_n} \cong \faktor{\S_n}{Z(S_n)} \cong \S_n \]
+	dunque $ \S_n \lhd \Aut{\S_n} $, pertanto ci basta dimostrare che tutti gli automorfismi sono interni. Sfruttiamo il fatto che gli automorfismi mandano classi di coniugio in classi di coniugio e che preservano l'ordine degli elementi per mostrare che
+	\begin{itemize}
+		\item  Ogni automorfismo rispetta la classe delle trasposizioni. Guardiamo come sono fatte le classi di coniugio degli elementi di ordine 2. Sia $ C_k $ la classe delle permutazioni composte da $ k $ trasposizioni disgiunte, abbiamo che
+		\[ |C_k|  = \frac{1}{2^k \cdot k!}\cdot \frac{n!}{(n-2k)!} \]
+		Imporre $ |C_1| = |C_k| $, equivale a risolvere
+		\[ 2^{k-1} = \frac{(n-2)!}{(n-k)!}{n-k \choose k } \]
+		\begin{itemize}
+			\item Per $ \boxed{k = 2} $ abbiamo
+			\[ 4 = (n-2)(n-3) \]
+			che non ha soluzione, perché i due fattori a destra sono interi consecutivi, quindi uno di loro sarà dispari.
+			\item Per $ \boxed{k = 3} $ abbiamo
+			\[ 4 = (n-2) {n-3 \choose 3} \]
+			che ammette $ n = 6 $ come unica soluzione (il caso famigerato!), visto che $ n-2 \mid 4 $ limita la ricerca delle soluzioni ai soli $ n = 3, 4, 6 $.
+			\item Infine, per $ \boxed{k > 3} $ notiamo che il fattore 
+			\[ \frac{(n-2)!}{(n-k)!} \]
+			contiene almeno un primo dispari.
+		\end{itemize}
+		Pertanto ogni automorfismo rispetta $ C_1 $, perché le altre classi sono troppo grandi. 
+		\item Osserviamo che, preso $ \varphi \in \Aut{\S_n} $, si ha
+		$$  \varphi(1, i) = (a_1, a_i)  $$
+		con tutti gli $ a_i $ distinti.
+		\item Dunque $ \varphi $ coincide, in realtà, con il coniugio per la permutazione
+		$$  \sigma : i \mapsto a_i  $$
+	\end{itemize}
+\end{proof}
+
 \end{multicols}
 \subsection{Prodotti diretti}
 
 \begin{multicols}{2}
-A un certo punto vorremo arrivare a dimostrare il seguente risultato, che ora enunciamo un po' a caso.
-\begin{theorem}[di Struttura dei gruppi abeliani finitamente generati]
- Possiamo scrivere ogni gruppo abeliano finitamente generato $G$, in modo unico, come prodotto diretto di gruppi ciclici nel modo seguente
- \[ G \cong \mathbb{Z}^r \times \mathbb{Z}_{n_1} \times \cdots \times \mathbb{Z}_{n_k} \]
- dove $n_1, \dots, n_k$ sono interi tali che $n_1 \mid n_2 \mid \dots \mid n_k $. 
-\end{theorem}
 
 
 
-\begin{theorem}{\label{struttura}}
-	Sia $ G $ un gruppo e $ H, K \lhd G $ due sottogruppi normali. Se
+\begin{theorem}[di Struttura]{\label{struttura}}
+	Sia $ G $ un gruppo e $ H, K < G $ due sottogruppi. Se
 	\begin{enumerate}
+		\item $ H \lhd\, G $   e   $ K \lhd\, G $
 		\item $ HK = G $
 		\item $ H \cup K = \{e\} $
 	\end{enumerate}
-allora $ G \cong H \times K $.
+allora $$  G \cong H \times K  $$
 \end{theorem}
 \begin{proof}
 	Mostriamo innanzitutto che $ hkh^{-1}k^{-1} $ appartiene ad entrambi i sottogruppi, infatti:
@@ -547,8 +563,8 @@ allora $ G \cong H \times K $.
 	\item $ \Int{G} \cong \Int{H} \times \Int{K} $.
 	\item $ \Aut{H} \times \Aut{K} < \Aut{G} $.
 \end{enumerate}
-\begin{theorem}
-	Si ha $ \Aut{H} \times \Aut{K} < \Aut{H \times K} $ e sono isomorfi se e solo se $ H $ e $ K $ sono caratteristici.
+\begin{theorem}[degli automorfismi prodotto]
+	Si ha $$  \Aut{H} \times \Aut{K} < \Aut{H \times K}  $$ e sono isomorfi se e solo se $ H $ e $ K $ sono caratteristici.
 \end{theorem}
 \begin{proof}
 	Consideriamo l'omomorfismo \fun{\Phi}{\Aut{H} \times \Aut{K}}{\Aut{H \times K}}{(f, g)}{\varphi_{fg}: (h, k) \mapsto \left(f(h), g(k)\right)}
@@ -609,15 +625,15 @@ Q_8
 	\item Se esiste un elemento di ordine 8 il gruppo è ciclico e pertanto isomorfo a $ \mathbb{Z}_8 $.
 	\item Se $ G $ ha solo elementi di ordine 2, allora è isomorfo a $ \left(\mathbb{Z}_2\right)^3 $. Mostriamo un risultato appena più generale. 
 \end{itemize}
-\begin{theorem}
+\begin{theorem}[dei gruppi solipsisti]
 	Se $ |G| $ ha solo elementi di ordine due ed è finito, allora $ G \cong \left(\mathbb{Z}_2\right)^n $.
 \end{theorem}
 \begin{proof}
 	Osserviamo che $ a^2b^2 = e = (ab)^2 = abab $ e, moltiplicando per $ a $ a sinistra e per $ b $ a destra, otteniamo $ ab = ba $ per ogni $ a, b \in G $. Pertanto $ G $ è abeliano. Possiamo ora procedere per induzione sulla dimensione di $ G $. Se $ |G| = 2 $ il risultato è chiaro. Supponiamo ora che sia vero per tutti i gruppi di ordine $ < 2^n $ e supponiamo $ 2^ n \leq |G| < 2^{n+1} $. Quando prendiamo un insieme minimale di $ h < n $ generatori $ \langle g_1, \dots g_h \rangle $ di un sottogruppo di $ H < G $, questo sarà isomorfo a $ \left(\mathbb{Z}_2\right)^h $ per ipotesi induttiva. Prendiamo un elemento $ g \notin H$, abbiamo che $ H $ e $ \langle g \rangle \cong \mathbb{Z}_2 $ sono sottoinsiemi normali e con intersezione banale, pertanto il sottoinsieme \[ \langle g, g_1, \dots g_h \rangle \cong H \times\langle g \rangle \cong \left(\mathbb{Z}_2\right)^h \times \mathbb{Z}_2 \cong \left(\mathbb{Z}_2\right)^{h+1} \]
 	per il teorema di struttura \ref{struttura}.
-	Così facendo possiamo continuare ad aggiungere elementi fino a saturare il gruppo e raggiungere la tesi.
+	Così facendo possiamo continuare ad aggiungere elementi fino a prenderli tutti.
 \end{proof}
-Sia ora $ g \in G $ l'elemento di ordine 4 richiesto e $ C_4 = \langle g \rangle $. Sia $ h \notin C_4 $ e consideriamo l'azione di coniugio di $ h $ su $ C_4 $
+Se $ G $ non ha elementi di ordine $ 8 $ e non hanno tutti ordine $ 2 $, allora esiste un $ g \in G $ di ordine 4 e sia $ C_4 = \langle g \rangle $. Sia $ h \notin C_4 $ e consideriamo l'azione di coniugio di $ h $ su $ C_4 $
 \fun{\varphi_g}{C_4}{C_4}{x}{hxh^{-1}}
 ben definita perché $ C_4 $, avendo indice $ 2 $, è normale in $ G $. Poiché $ \Aut{\mathbb{Z}_4} \cong \mathbb{Z}_2 $, abbiamo solo due possibilità: $$  \varphi_g =  id^{\pm 1}  $$
 
@@ -639,7 +655,7 @@ ben definita perché $ C_4 $, avendo indice $ 2 $, è normale in $ G $. Poiché 
 
 \begin{multicols}{2}
 	
-\begin{theorem}\label{ppp}
+\begin{theorem}[del piccolo indice primo]\label{ppp}
 	Siano $ G $ un gruppo finito e $ H $ un sottogruppo che ha come indice il più piccolo primo $ p $ che divide $ G $, allora $ H \lhd G $.
 \end{theorem}
 \begin{proof}
@@ -701,12 +717,14 @@ ben definita perché $ C_4 $, avendo indice $ 2 $, è normale in $ G $. Poiché 
 	Inoltre $ \bar{K}$ se e solo se il prodotto è diretto. $$  \bar{K} \lhd H \rtimes_\varphi K  \;\Leftrightarrow\; \rtimes = \times $$
 \end{remark}
 
-\begin{theorem}[Teorema di decomposizione in prodotto semidiretto]
-	Siano $ G $ un gruppo e $ H, K < G $ sottogruppi, con $ H \lhd G $ normale. Se \begin{enumerate}
+\begin{theorem}[di decomposizione]
+	Siano $ G $ un gruppo e $ H, K < G $ sottogruppi. Se
+	\begin{enumerate}
+		\item $ H \lhd\, G $
 		\item $ HK = G $
 		\item $ H \cap G = \{e\} $
 	\end{enumerate}
-allora $ G \cong H \rtimes_\varphi K $ dove $ \varphi $ manda $ k $ nella corrispondente azione di coniugio \fun{\varphi}{K}{\Aut{H}}{k}{\varphi_k : h \mapsto hkh^{-1}}
+allora $$  G \cong H \rtimes_\varphi K  $$ dove $ \varphi $ manda $ k $ nella corrispondente azione di coniugio \fun{\varphi}{K}{\Aut{H}}{k}{\varphi_k : h \mapsto hkh^{-1}}
 \end{theorem}
 \begin{proof}
 	Consideriamo \fun{\Phi}{H \rtimes_\varphi K}{G}{(h, k)}{hk}
@@ -782,7 +800,7 @@ pertanto, in questo caso, esiste \emph{un unico} gruppo di ordine $ pq $ non abe
 	\begin{definition}
 		Chiamiamo $ p $-sylow ogni $ p $-sottogruppo di ordine massimo. Ovvero $ H < G $, dove $ |G| = p^mn $ con $ (m, n) = 1 $ e $ |H| = p^m $.
 	\end{definition}
-\begin{theorem}\label{sylow}
+\begin{theorem}[di Sylow]\label{sylow}
 	Sia G un gruppo finito di ordine $ |G| = p^nm  $, dove $ p $ è primo e $ m $ è un intero a lui coprimo: $ (p, m) = 1 $. Allora sappiamo che:
 	\begin{itemize}
 		\item[$ \exists $.] Per ogni $ 0 \leq \alpha \leq n $, esiste un sottogruppo $ H<G $ di ordine $|H| = p^\alpha $.
@@ -801,17 +819,17 @@ pertanto, in questo caso, esiste \emph{un unico} gruppo di ordine $ pq $ non abe
 		$$  v_p\left(\prod_{i = 1}^{p^\alpha - 1}\frac{p^nm-i}{p^\alpha -1}\right) =  0  $$
 		concludiamo che
 		\[ p^{n-\alpha} \mid\mid \mathcal{M}_\alpha \]
-		Consideriamo ora l'azione di $ G $ su $ \mathcal{M}_\alpha $ data dalla moltiplicazione a sinistra
+		Consideriamo l'azione di $ G $ su $ \mathcal{M}_\alpha $ data dalla moltiplicazione a sinistra
 		\fun{\Phi}{G}{\mathcal{S}(\mathcal{M}_\alpha)}{g}{\psi_g: M \mapsto gM}
 		Vogliamo ora mostrare che esiste uno stabilizzatore della cardinalità giusta. Per la solita decomposizione in orbite abbiamo
 		\[ |\mathcal{M}_\alpha| = \sum \frac{|G|}{|\Stab{M_i}|} \]
 		Per le osservazione sulla cardinalità, deve esistere un'orbita di cardinalità non divisibile per $ p^{n-\alpha +1} $
-		\[ \exists M_i \text{ tale che }  p^{n-\alpha +1}\nmid |\Orb{M_i}| \]
+		\[ \exists i \text{ tale che }  p^{n-\alpha +1}\nmid |\Orb{M_i}| \]
 		 Il corrispondente stabilizzatore avrà pertanto cardinalità divisibile almeno per $ p^\alpha $.
 		 Ma se fissiamo un elemento $ x \in M_i $ e consideriamo la funzione iniettiva
 		 \fun{f}{\Stab{M_i}}{M_i}{y}{xy}
-		 ci rendiamo conto che lo stabilizzatore non avrà una cardinalità maggiore dell'insieme che stabilizza
-		 \[ p \mid |\Stab{M_i}| \leq |M_i| = p^\alpha \]
+		 scopriamo che lo stabilizzatore non può avere una cardinalità maggiore dell'insieme che stabilizza
+		 \[ p^\alpha \mid |\Stab{M_i}| \leq |M_i| = p^\alpha \]
 		 ed è dunque il sottogruppo che cercavamo.
 		
 		\item[$ \subseteq $.] Sia $ H < G $ un $ p $-sottogruppo $ |H| = p^\alpha $ e $ S $ un $ p $-sylow. Consideriamo l'azione di $ H $ sull'insieme $ X $ delle classi laterali di $ S $ per moltiplicazione a sinistra
@@ -841,21 +859,21 @@ pertanto, in questo caso, esiste \emph{un unico} gruppo di ordine $ pq $ non abe
 	Ogni gruppo $ G $ abeliano finito è prodotto diretto dei suoi $ p $-sylow.
 \end{theorem}
 \begin{proof}
-	Visto che i gruppi sono abeliani usiamo la nozione additiva. Per ogni divisore $ d||G| $ dell'ordine del gruppo sia
+	Usiamo la nozione additiva e sia $ G = p^nm $ come al solito. Per ogni divisore $ d$ dell'ordine del gruppo sia
 	\[ G_d = \ker\psi_d = \{ g \in G \mid dg = 0 \} \]
-	Ci è sufficiente mostrare che se $ G = p^nm $, come al solito, allora 
+	Ci è sufficiente mostrare che
 	\[ G \cong G_{p^n} \times G_m \]
-	Osserviamo innanzitutto che $ G_{p^n} $ è un p-sylow. Dev'essere un $ p $-gruppo perché se $ |G_{p^n}| $ fosse divisibile per un primo $ q $, allora per il Teorema di Cauhcy \ref{cauchy} conterrebbe almeno un elemento di ordine $ q $, contro la sua definizione. A questo punto, dovendo contenere l'unico $ p $-sylow di $ G $  (il coniugio è banale negli abeliani, più sylow coinciderebbero), non può che esserlo (non può avere cardinalità maggiore).
-	E' inoltre immediato verificare che
+	Osserviamo innanzitutto che $ G_{p^n} $ è un p-sylow. Dev'essere un $ p $-gruppo perché se $ |G_{p^n}| $ fosse divisibile per un primo $ q $, allora per il Teorema di Cauhcy \ref{cauchy} conterrebbe almeno un elemento di ordine $ q $, contro la sua definizione. A questo punto, dovendo contenere l'unico $ p $-sylow di $ G $  (il coniugio è banale negli abeliani) non può che esserlo.
+	Verifichiamo che
 	\begin{enumerate}
-		\item I due sottogruppi sono normali in $ G $ perché è abeliano.
+		\item I due sottogruppi sono normali in $ G $, perché è abeliano.
 		\item La loro intersezione è banale, perché tutti gli elementi del $ p $-sylow hanno ordine divisibile per un primo che non divide l'ordine $ m $ dell'altro sottogruppo.
 		\item La loro somma è $ G $. Infatti per Bezout esistono interi $ a, b $ tali che
 		\[ ap^n + bm = 1 \]
 		che moltiplicato per un qualunque elemento di $ g \in G $ diventa
 		\[ a(gp^n) + b(gm) = g \]
 		Osserviamo che $ gp^n \in G_{m} $, poiché $$  m (gp^n) = (mp^n) g = |G| g = 0  $$
-		Analogamente $ gm \in G_{p^n} $ e pertanto la somma dei due sottogruppi contiene $ G $ 
+		Analogamente $ gm \in G_{p^n} $ e pertanto la somma dei due sottogruppi contiene $ G $.
 	\end{enumerate}
 \end{proof}
 
@@ -864,7 +882,7 @@ pertanto, in questo caso, esiste \emph{un unico} gruppo di ordine $ pq $ non abe
 	\item Chi è il 2-sylow di $ \mathcal{S}_4 $?
 	\item Chi sono i gruppi di ordine $ 12 $?
 \end{enumerate}
-
+\bigskip
 \textbf{Classificazione dei gruppi di ordine 12.}
 
 Quanti possono essere i $ p $-sylow?
@@ -993,7 +1011,7 @@ questi generano un sottogruppo "disgiunto" da $ \Z_2 \times \Z_2 $ isomorfo a $ 
 
 \subsection{Teorema Fondamentale dei Gruppi Abeliani Finiti}
 \begin{multicols}{2}
-\begin{theorem}\label{tfgaf}
+\begin{theorem}[di Struttura dei Gruppi Abeliani Finiti]\label{tfgaf}
 	Se $ G $ è un gruppo abeliano finito allora si decompone in modo unico come prodotto diretto di gruppi ciclici di ordine $ n_1, \dots, n_s $ \[ G \cong \mathbb{Z}_{n_1} \times \cdots \times \mathbb{Z}_{n_s} \] con $ n_1 \mid \dots \mid n_s $.
 \end{theorem}
 \begin{proof}
@@ -1065,7 +1083,7 @@ Se invece $ P_5 $ fosse normale?
 		\end{align*}
 		Dato un elemento $ g $, conosciamo la decomposizione in cicli $ \varphi_g $, questa dev'essere prodotto di cicli del tipo
 		$$  (x \; gx \; \cdots \; g^{m-1}x)  $$
-		al variare di $ x $ in un opportuno sistema di rappresentanti e dove $ m $ è l'ordine di $ g $. Per il Teorema di Cauchy esiste un elemento di ordine $ 2 $, che avrà come immagine il prodotto di $ d $ 2-cicli. Pertanto $ G \nless \mathcal{A}_{2d} $ e quindi $$  [G G \cap \mathcal{A}_{2d}] = 2  $$
+		al variare di $ x $ in un opportuno sistema di rappresentanti e dove $ m $ è l'ordine di $ g $. Per il Teorema di Cauchy esiste un elemento di ordine $ 2 $, che avrà come immagine il prodotto di $ d $ 2-cicli. Pertanto $ G \nless \mathcal{A}_{2d} $ e quindi $$  [G : G \cap \mathcal{A}_{2d}] = 2  $$
 		
 		\item Sia $ G $ un gruppo finito. Se esiste un sottogruppo $ H < G $ di indice $ n $, allora esiste un sottogruppo normale $ N \lhd G $ di indice divisore di $ n! $.
 		
@@ -1090,13 +1108,150 @@ Se invece $ P_5 $ fosse normale?
 			\item contare il numero di classi di coniugio.
 		\end{enumerate}
 		
+		\item In un $ p $-gruppo, il centro di uno stabilizzatore di un elemento non nel centro è più grande del centro di tutto il gruppo.
 		
+		\item $ \Z_n^\times $ è ciclico se e solo se $ n = 2, 4, p^n, 2p^n $.
 	
 	\end{enumerate}
 	
 	
 \end{multicols}
+\newpage
+\setcounter{section}{0} % per scegliere la lettera giusta
+\section{Anelli}
+\subsection{Prime definizioni}
+\begin{multicols}{2}
+Da qua in avanti, per Anello intenderemo sempre che l'anello è commutativo e ha l'identità.
+
+\begin{definition}[Divisori di 0]
+	Un elemento di un anello $ x \in A $ si dice \emph{divisore di zero} quando
+	\[ \exists y \in A \quad\text{    tale che    }\quad yx = 0 \]
+	Un anello $ A $ si dice \emph{dominio d'integrità} quando l'unico divisore di zero è lo 0 stesso
+	\[ \mathcal{D}:= \{\text{divisori di zero}\} = \{0\} \]
+\end{definition}
+\begin{definition}[Nilpotenza]
+	Un elemento di un anello $ x \in A $ si dice \emph{nilpotente} quando
+	 \[ \exists n \in \mathbb{N} \quad\text{    tale che    }\quad x^n = 0 \]
+	 Un anello $ A $ si dice \emph{ridotto} quando l'unico elemento nilpotente è 0
+	 \[ \mathcal{N}: = \{\text{nilpotenti}\} = \{0\} \]
+\end{definition}
+
+\begin{theorem}[Prime proprietà]
+	Valgono queste proprietà
+	\begin{enumerate}
+		\item $ A^\times $ è un gruppo moltiplicativo.
+		\item $ A^\times \cap \mathcal{D} = \phi $.
+		\item Se $ A $ è finito $ A = A^\times \sqcup \mathcal{D} $.
+	\end{enumerate}
+\end{theorem}
+\begin{remark}
+	Un dominio d'integrità finito è un campo.
+\end{remark}
+
+Lista di oggetti che potrebbero sembrare ideali, dati due ideali $ I $ e $ J $:
+\begin{itemize}
+	\item  $ I \cup J $
+	\item  $ I \cap J $
+	\item $ I + J $
+	\item  $ IJ $
+	\item $ \sqrt{I} := \{ x \in A \mid x^n \in I \} $
+	\item $ (I:J) := \{ x \in A \mid xJ \in I \} $
+\end{itemize}
+
+
+\begin{remark}
+	Abbiamo una bella caratterizzazione degli ideali propri
+	\[ I \subsetneq A \;\Leftrightarrow\; I \cap A^\times = \phi \;\Leftrightarrow\; 1 \notin I \]
+	(è quasi completamente ovvia guardando la contronominale)
+\end{remark}
+
+
+\begin{remark}
+	Un campo $ \mathbb{K} $ ha solo anelli banali.
+\end{remark}
+
+\begin{definition}[Omomorfismo]
+	Una funzione tra due anelli $ A $ e $ B $ è detta omomorfismo di anelli se
+	\begin{enumerate}
+		\item è omomorfismo dei rispettivi gruppi additivi.
+		\item $ f(ab)=f(a)f(b) $
+		\item $ f(1_A)=f(1_B) $
+	\end{enumerate}
+\end{definition}
+
+\begin{theorem}[di omomorfismo]\label{omoanelli}
+	Dato un omomorfismo di anelli $ f $ e un ideale $ I \subseteq \ker f $, esiste ed è unico l'omomorfismo $ \bar{f} $ che fa commutare il seguente diagramma
+	\[ \begin{tikzcd}
+	A \arrow{r}{f} \arrow[swap]{d}{\Pi} & B \\
+	\faktor{A}{I} \arrow[swap]{ru}{\bar{f}}
+	\end{tikzcd} \]
+\end{theorem}
+\begin{proof}
+	contenuto...
+\end{proof}
+\begin{remark}
+	Questo dimostra che gli ideali sono tutti e soli i nuclei di omorfismi.
+\end{remark}
+
+\begin{theorem}[di corrispondenza]\label{corr}
+	Ogni proiezione $ \Pi : A \to \faktor{A}{I} $ induce una relazione biunivoca tra gli ideali del quoziente e gli ideali di $ A $ che contengono $ I $
+	\[ \{ \text{ideali di }\faktor{A}{I} \} \leftrightarrow \{ \text{ideali di $ A $ che contengono $ I $} \} \]
+	che preserva:
+	\begin{itemize}
+		\item l'ordinamento indotto dall'inclusione.
+		\item l'indice.
+		\item primalità e massimalità.
+	\end{itemize}
+\end{theorem}
+\begin{proof}
+	contenuto...
+\end{proof}
+\begin{remark}
+	Vale sempre che
+	\[ IJ \subseteq I \cap J \]
+	c'è uguaglianza in caso di \emph{comassimalità}
+	\[ I + J = A \;\Leftrightarrow\; IJ = I \cap J \]
+\end{remark}
+\begin{proof}
+	contenuto...
+\end{proof}
+
+\begin{theorem}[cinese degli anelli]
+	Dati due ideali $ I, J \subseteq A $ comassimali, si ha che
+	\[ \faktor{A}{IJ} \cong \faktor{A}{I} \times \faktor{A}{J} \]
+\end{theorem}
+\begin{proof}
+	contenuto...
+\end{proof}
+
+\begin{definition}[ideale primo]
+	Un ideale $ I \subseteq A $ si dice \emph{primo} quando
+	\[ \forall x, y \in A \qquad xy \in I \;\Rightarrow\; x \in I \text{ o } y \in I \]
+\end{definition}
+
+\begin{definition}[ideale massimale]
+	Un ideale $ I \subseteq A $ si dice \emph{massimale}, se è massimale rispetto all'inclusione tra gli ideali propri di $ A $.
+\end{definition}
+
+\begin{theorem}
+	primo sse dominio, massimale sse campo.
+\end{theorem}
+
+\begin{remark}
+	$ A $ è un dominio se e solo se l'ideale $ \{0\} $ è primo.
+\end{remark}
+\begin{remark}
+	$ A $ è un campo se e solo se l'ideale $ \{0\} $ è massimale.
+\end{remark}
+\begin{remark}
+	Un ideale massimale è anche primo, perché ogni campo è anche un dominio.
+\end{remark}
+
+
+\end{multicols}
+
+
+
 %\newpage
-%\setcounter{section}{0} % per scegliere la lettera giusta
-%\section{Anelli}
+%\listoftheorems[ignoreall,show={theorem}]
 \end{document}
